--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
+ecdsa==0.17.0
 entrypoints==0.4
 executing==0.8.3
 fastapi==0.75.0
@@ -59,16 +60,19 @@ prompt-toolkit==3.0.28
 psycopg2==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
 Pygments==2.11.2
 pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-jose==3.3.0
 pytz==2021.3
 pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.1
+rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
