--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.7.7
 anyio==3.5.0
 appnope==0.1.2
 argon2-cffi==21.3.0
@@ -21,6 +22,7 @@ fastapi==0.75.0
 fonttools==4.29.1
 h11==0.13.0
 idna==3.3
+importlib-metadata==4.11.3
 importlib-resources==5.4.0
 ipykernel==6.9.1
 ipython==8.1.1
@@ -37,6 +39,7 @@ jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
 kiwisolver==1.3.2
+Mako==1.2.0
 MarkupSafe==2.1.0
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
