--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohttp==3.8.1
+aiopg==1.3.3
+aiosignal==1.2.0
 alembic==1.7.7
 anyio==3.5.0
 appnope==0.1.2
@@ -5,13 +8,20 @@ argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.5.0
 asttokens==2.0.5
+async-timeout==4.0.2
+asyncio-redis==0.16.0
 asyncpg==0.24.0
 attrs==21.4.0
 backcall==0.2.0
 bcrypt==3.2.0
 bleach==4.1.0
+broadcaster==0.2.0
+Brotli==1.0.9
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.0.4
+ConfigArgParse==1.5.3
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
@@ -20,8 +30,17 @@ ecdsa==0.17.0
 entrypoints==0.4
 executing==0.8.3
 fastapi==0.75.0
+fastapi-websocket-pubsub==0.2.0
+fastapi-websocket-rpc==0.1.21
+Flask==2.1.1
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
 fonttools==4.29.1
+frozenlist==1.3.0
+gevent==21.12.0
+geventhttpclient==1.5.3
 greenlet==1.1.2
+grequests==0.6.0
 h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.3
@@ -30,6 +49,7 @@ ipykernel==6.9.1
 ipython==8.1.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.0.3
 joblib==1.1.0
@@ -41,11 +61,14 @@ jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
 kiwisolver==1.3.2
+locust==2.8.6
 Mako==1.2.0
 MarkupSafe==2.1.0
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
+msgpack==1.0.3
+multidict==6.0.2
 nbclient==0.5.12
 nbconvert==6.4.2
 nbformat==5.1.3
@@ -62,7 +85,9 @@ pickleshare==0.7.5
 Pillow==9.0.1
 prometheus-client==0.13.1
 prompt-toolkit==3.0.28
+psutil==5.9.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
@@ -73,10 +98,13 @@ pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-jose==3.3.0
+python-multipart==0.0.5
 pytz==2021.3
 pyzmq==22.3.0
 qtconsole==5.2.2
 QtPy==2.0.1
+requests==2.27.1
+roundrobin==0.0.2
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
@@ -88,14 +116,21 @@ sniffio==1.2.0
 SQLAlchemy==1.4.32
 stack-data==0.2.0
 starlette==0.17.1
+tenacity==8.0.1
 terminado==0.13.2
 testpath==0.6.0
 threadpoolctl==3.1.0
 tornado==6.1
 traitlets==5.1.1
 typing-extensions==4.1.1
+urllib3==1.26.9
 uvicorn==0.17.5
 wcwidth==0.2.5
 webencodings==0.5.1
+websockets==10.2
+Werkzeug==2.1.1
 widgetsnbextension==3.5.2
+yarl==1.7.2
 zipp==3.7.0
+zope.event==4.5.0
+zope.interface==5.4.0
